--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   
+  
    <script  src="/app.js" type="module"></script>
-   
+
+
     <link rel="stylesheet" href="./style/counter.css">
     <link rel="stylesheet" href="./style/timer.css">
     <link rel="stylesheet" href="./style/style.css">
@@ -16,7 +18,7 @@
    <!--to use only counter-->
    <!--<script src="./src/counter/counter.js" type="module"></script>
     <script src="./src/timer/timer.js" type="module"></script>-->
- 
+    <!--<div id="root"></div>-->
 
     </head>
   <body>
